--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Main Branch</h1>
     <h2>Develop Branch</h2>
     <h3>Austin's Branch</h3>
+    <h3>AARON</h3>
+    <h3>Dante's Branch</h3>
 </body>
 </html>
